# cbr-investment

./: README.md  pyproject.toml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_investment/: version
docs/partners/: monetising-trust-and-knowledge__for-news-providers.md  monetizing-trust-and-knowledge__for-news-providers.md
docs/strategy/: cbr-financial-model.md  competitive-analysis.md  founder-profile.md  investment-strategy-analysis.md  investor-user-journey.md  llms-as-a-commodity-strategy.md  marketing-strategy.md  persona-driven-communication-strategy.md  persona-driven-strategy.md  personalised-news-feed-architecture.md  revenue-model-and-financial-strategy.md  runs-everywhere-strategy.md  who-should-invest.md
resources/: Documentation-Style-Guide  README.md
resources/wardley-maps/: Current State - Cybersecurity Knowledge Translation.md
resources/wardley-maps/examples/: Build Buy Outsource Example.wm  Evolving Example.wm  Pipelines Example.wm
